# GRDB-ORM

./: .gitignore  Cargo.toml  LICENSE  README.MD
Parser/: .gitignore  Cargo.toml  build.rs
Parser/compiled/: sqlite_parser_swift_grdb  sqlite_parser_swift_grdb.d
Parser/compiled/.fingerprint/Inflector-1b9b4738da73a42d/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-3073a9b717e84fa1/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-35a229b9362ede5a/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-498977513feeea4f/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-4ad1bb6817dda2f4/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-66b83d9e7d722b93/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-a40dd59119a2354b/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-ae07d69da3c10a59/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-b9bb2f6baed68518/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-d11cd2b992a4ed41/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-d2af3e793c97779a/: lib-inflector-d2af3e793c97779a  lib-inflector-d2af3e793c97779a.json
Parser/compiled/.fingerprint/Inflector-dbaf28676046dec0/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-ddd69050c321fe33/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/Inflector-ea0cda86fd19efac/: lib-inflector  lib-inflector.json
Parser/compiled/.fingerprint/ahash-1099dc1047ebffda/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-18d003c74aa2bee5/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-3c499df46ba6353e/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-4094103d91144019/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-465b6c9171a81290/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-516e36e2fd20cc92/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-98914ebae742fae9/: lib-ahash-98914ebae742fae9  lib-ahash-98914ebae742fae9.json
Parser/compiled/.fingerprint/ahash-9f4b01ace65c6250/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-a902b3bf6e7a5512/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-cf23be87f0652c6a/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/ahash-ed73c7825951941f/: lib-ahash  lib-ahash.json
Parser/compiled/.fingerprint/aho-corasick-329fb4b76edc65f3/: lib-aho_corasick  lib-aho_corasick.json
Parser/compiled/.fingerprint/aho-corasick-37c091834e77aac2/: lib-aho_corasick  lib-aho_corasick.json
Parser/compiled/.fingerprint/aho-corasick-3a5372d35fd0846a/: lib-aho_corasick-3a5372d35fd0846a  lib-aho_corasick-3a5372d35fd0846a.json
Parser/compiled/.fingerprint/aho-corasick-42eab57bf073ebc1/: lib-aho_corasick  lib-aho_corasick.json
Parser/config/: .env  README.MD  custom_mapping.toml  dyn_queries.toml  room.toml  upserts.toml
Parser/src/: android.rs  configuration.rs  format_swift_code.rs  generate_generated_code.rs  lib.rs  line_writer.rs  main.rs  metadata.rs  output_dir_initializer.rs  parse.rs  properties.rs  room.rs  swift_property.rs  table_meta_data.rs  type_interfaces_custom_code.rs
Parser/src/android/: android.rs  entities.rs  kotlin.rs  mod.rs
Parser/src/custom_mapping/: mod.rs  reader.rs
Parser/src/dynamic_queries/: mod.rs  parse.rs  reader.rs  return_type.rs
Parser/src/query_writer/: main_struct.rs  mod.rs  primary_key.rs
Parser/src/shared/: data_extensions.rs  json_codable.rs  logging.rs  mod.rs  writer.rs
Parser/src/swift_struct/: hashable_conformance.rs  identifiable.rs  initializer.rs  main_struct_to_pk.rs  mod.rs  property_writer.rs  table_writer.rs
Parser/src/upsert/: mod.rs  parse.rs  reader.rs
grdb_orm_lib/: Cargo.toml
grdb_orm_lib/src/: dyn_query.rs  lib.rs  room.rs
(+1125 files in other folders)
