[workspace]
members = [
    "new_version",
    "Parser",
    "grdb_orm_lib",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.6"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sqlite_parser = "0.1.20"
lazy_static = "1.4.0"
Inflector = "0.11.4"
heck = "0.4.1"
clap = { version = "4.4.1", features = ["derive"] }
regex = "1.10.2"
dotenv = "0.15"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
env_parser = { version = "0.1.8", features = ["to_lazy_static"] }

[workspace.dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]