[workspace]
members = [
    "new_version",
    "Parser",
    "grdb_orm_lib",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.7"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
sqlite_parser = "0.1.20"
lazy_static = "1.5.0"
Inflector = "0.11.4"
heck = "0.5.0"
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.0"
dotenv = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
env_parser = { version = "0.1.8", features = ["to_lazy_static"] }

[workspace.dependencies.rusqlite]
version = "0.30.0"
features = ["bundled"]