[package]
name = "sqlite_parser_swift_grdb"
version = "0.1.0"
authors = ["Jasper Visser <jasperav@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
env_parser = { version = "0.1", features = ["to_lazy_static"] }

[dependencies]
sqlite_parser = "0.1"
lazy_static = "1.4"
Inflector = "0.11"
regex = "1.4"
dotenv = "0.15"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]