[package]
name = "sqlite_parser_swift_grdb"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
env_parser = { workspace = true }

[dependencies]
sqlite_parser = { workspace = true }
lazy_static = { workspace = true }
Inflector = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
dotenv = { workspace = true }
rusqlite = { workspace = true }
heck = { workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
toml = { workspace = true }
