[package]
name = "grdb_orm_lib"
version = "0.1.2"
edition = "2021"
description = "Used for GRDB orm"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
