[package]
name = "grdb_orm_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Used for GRDB orm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
